--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^20.1.0",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
+    "dotenv": "^16.3.1",
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.0.0",
     "eslint-plugin-promise": "^6.0.0",
@@ -38,6 +39,7 @@
   },
   "dependencies": {
     "@scribelabsai/auth": "^1.3.0",
-    "aws4fetch": "^1.0.17"
+    "aws-sigv4-fetch": "^2.1.1",
+    "zod": "^3.22.2"
   }
 }
