build: add workflow

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "author": "Alex Bostock <alex@scribelabs.ai>",
   "license": "MIT License",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+    "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
     "@types/node": "^20.1.0",
