--- a/package.json
+++ b/package.json
@@ -34,12 +34,15 @@
     "eslint-plugin-vitest": "^0.3.8",
     "prettier": "^3.0.0",
     "prettier-plugin-organize-imports": "^3.0.0",
+    "typedoc": "^0.25.4",
+    "typedoc-plugin-markdown": "^3.17.1",
     "typescript": "^5.0.2",
     "vitest": "^0.34.3"
   },
   "dependencies": {
     "@scribelabsai/auth": "^1.3.0",
     "aws-sigv4-fetch": "^2.1.1",
+    "concat-md": "^0.5.1",
     "zod": "^3.22.2"
   }
 }
