--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^20.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -40,6 +41,7 @@
   "dependencies": {
     "@scribelabsai/auth": "^1.3.0",
     "aws-sigv4-fetch": "^2.1.1",
+    "crypto-js": "4.2.0",
     "zod": "^3.22.2"
   }
 }
