--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "scripts": {
     "build": "tsc",
     "check": "tsc --noEmit",
-    "test": "NODE_OPTIONS='--experimental-vm-modules' vitest run",
+    "test": "vitest run --logHeapUsage",
+    "coverage": "npm run test -- --coverage",
     "changelog": "git log --pretty=\"format:%s\" --decorate=no $(git describe --tags --abbrev=0 @^)..@ > Changelog.md"
   },
   "author": "Alex Bostock <alex@scribelabs.ai>",
@@ -25,6 +26,7 @@
     "@types/node": "^20.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "@vitest/coverage-v8": "^1.3.0",
     "dotenv": "^16.3.1",
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^9.0.0",
