--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,14 +15,20 @@ jobs:
     steps:
       - name: Clone
         uses: actions/checkout@v4
-      - uses: actions/setup-python@v4
+      - name: Use Node.js 18.x
+        uses: actions/setup-node@v4
         with:
-          python-version: '3.10'
-          cache: 'pip'
+          node-version: 18.x
+          registry-url: 'https://npm.pkg.github.com'
+          scope: '@scribelabsai'
       - name: Install deps
-        run: pip install -r requirements.txt
+        run: npm install
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build lib and tests
+        run: npm run build:lib
       - name: Run tests
-        run: python -m coverage run -m pytest
+        run: npm run coverage
         env:
           CLIENT_ID: ${{ secrets.CLIENT_ID }}
           USERNAME: ${{ secrets.USERNAME }}
