--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
-    "@types/crypto-js": "^4.2.2",
+    "@types/crypto-js": "3.1.47",
     "@types/node": "^20.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
