--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -6,6 +6,8 @@ on:
 permissions:
   contents: write
   pull-requests: write
+  id-token: write
+  packages: write
 
 name: release-please
 
@@ -13,9 +15,28 @@ jobs:
   release-please:
     runs-on: ubuntu-latest
     steps:
-      - uses: google-github-actions/release-please-action@v3
+      - uses: google-github-actions/release-please-action@v4
+        id: release
+      - name: Clone
+        if: steps.release.outputs.release_created
+        uses: actions/checkout@v5
+      - name: Use Node.js 22.x
+        if: steps.release.outputs.release_created
+        uses: actions/setup-node@v6
         with:
-          release-type: node
-          package-name: '@scribelabsai/mi'
-          include-v-in-tag: false
-          token: ${{ secrets.PATFORRELEASE }}
+          node-version: 22.x
+          registry-url: 'https://registry.npmjs.org/'
+          scope: '@scribelabsai'
+      - name: Update npm
+        run: npm install -g npm@latest
+      - name: Install deps
+        if: steps.release.outputs.release_created
+        run: npm install
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build source
+        if: steps.release.outputs.release_created
+        run: npm run build
+      - name: Publish
+        if: steps.release.outputs.release_created
+        run: npm publish
